# chat

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  README.md  _typos.toml  cliff.toml  deny.toml
.github/workflows/: build.yml
chat_core/: Cargo.toml
chat_core/fixtures/: decoding.pem  encoding.pem
chat_core/src/: lib.rs
chat_core/src/middlewares/: auth.rs  mod.rs  request_id.rs
chat_core/src/utils/: jwt.rs
chat_server/: Cargo.toml  app.yml
chat_server/api_test/: auth.rest  chat.rest  message.rest  user.rest
chat_server/fixtures/: test.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs
chat_server/src/handlers/: auth.rs  chat.rs  messages.rs  workspace.rs
chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs  request_id.rs  server_time.rs
chat_server/src/models/: chat.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
chat_test/: Cargo.toml  notify.yml
chat_test/tests/: chat.rs
migrations/: 20240608140816_initial.sql  20240615165527_workspace.sql  20240630055700_triggers.sql
notify_server/: Cargo.toml  index.html
notify_server/src/: config.rs  error.rs  lib.rs  main.rs  notif.rs  sse.rs
